# chaos-game

./: chaos_game.ipynb  chaos_game_hyperbolic.ipynb  pyproject.toml  test.npz
src/: chaos_game.py
