[tool.poetry]
name = "chaos-game"
version = "0.1.0"
description = ""
authors = ["hissanova <369bodhisattva@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.10.1"
jupyter = "^1.1.1"
plotly = {extras = ["express"], version = "^6.0.1"}
jedi = "^0.19.2"
black = "^25.1.0"
flake8 = "^7.2.0"
mypy = "^1.15.0"
tqdm = "^4.67.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
